--- a/FactoryMethodExample/Base.lproj/Main.storyboard
+++ b/FactoryMethodExample/Base.lproj/Main.storyboard
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -15,11 +16,64 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" bounces="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gNi-Gb-7ET">
+                                <rect key="frame" x="0.0" y="20" width="600" height="580"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZIM-hw-1T1">
+                                        <rect key="frame" x="494" y="0.0" width="106" height="30"/>
+                                        <state key="normal" title="factory method"/>
+                                    </button>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wEM-w1-dyt">
+                                        <rect key="frame" x="20" y="40" width="560" height="440"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="440" id="Spd-II-2eD"/>
+                                        </constraints>
+                                    </view>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vWk-mF-uzo">
+                                        <rect key="frame" x="274" y="530" width="52" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="52" id="nn0-en-C5D"/>
+                                            <constraint firstAttribute="height" constant="30" id="w7G-iM-hJh"/>
+                                        </constraints>
+                                        <state key="normal" title="commit"/>
+                                        <connections>
+                                            <action selector="onClickCommit:" destination="BYZ-38-t0r" eventType="touchUpInside" id="aRe-sX-pT0"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstItem="wEM-w1-dyt" firstAttribute="centerX" secondItem="vWk-mF-uzo" secondAttribute="centerX" id="3Qc-IB-AgC"/>
+                                    <constraint firstItem="wEM-w1-dyt" firstAttribute="top" secondItem="ZIM-hw-1T1" secondAttribute="bottom" constant="10" id="JB0-cg-pTs"/>
+                                    <constraint firstAttribute="trailing" secondItem="wEM-w1-dyt" secondAttribute="trailing" constant="20" id="UXg-qO-qCI"/>
+                                    <constraint firstItem="ZIM-hw-1T1" firstAttribute="top" secondItem="gNi-Gb-7ET" secondAttribute="top" id="bPl-Zv-uSb"/>
+                                    <constraint firstItem="wEM-w1-dyt" firstAttribute="centerX" secondItem="gNi-Gb-7ET" secondAttribute="centerX" id="evO-6E-v8Q"/>
+                                    <constraint firstAttribute="bottom" secondItem="vWk-mF-uzo" secondAttribute="bottom" constant="20" id="mAW-Mb-mga"/>
+                                    <constraint firstAttribute="trailing" secondItem="ZIM-hw-1T1" secondAttribute="trailing" id="nxi-2d-PA6"/>
+                                    <constraint firstItem="wEM-w1-dyt" firstAttribute="leading" secondItem="gNi-Gb-7ET" secondAttribute="leading" constant="20" id="rsv-AV-HHd"/>
+                                    <constraint firstItem="vWk-mF-uzo" firstAttribute="top" secondItem="wEM-w1-dyt" secondAttribute="bottom" constant="50" id="xal-s0-LHf"/>
+                                </constraints>
+                            </scrollView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="gNi-Gb-7ET" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Doa-n5-fKe"/>
+                            <constraint firstItem="gNi-Gb-7ET" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailing" id="bAi-71-bBr"/>
+                            <constraint firstItem="gNi-Gb-7ET" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="mPj-02-L3C"/>
+                            <constraint firstItem="gNi-Gb-7ET" firstAttribute="bottom" secondItem="wfy-db-euE" secondAttribute="top" id="qVd-PJ-Zpd"/>
+                            <constraint firstItem="gNi-Gb-7ET" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="yKE-8W-7b0"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="backView" destination="wEM-w1-dyt" id="bb8-42-Z3U"/>
+                        <outlet property="scrollview" destination="gNi-Gb-7ET" id="0fM-uh-EHa"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="418" y="312"/>
         </scene>
     </scenes>
 </document>
