--- a/FactoryMethodExample/Base.lproj/Main.storyboard
+++ b/FactoryMethodExample/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -20,10 +20,6 @@
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" bounces="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gNi-Gb-7ET">
                                 <rect key="frame" x="0.0" y="20" width="600" height="580"/>
                                 <subviews>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ZIM-hw-1T1">
-                                        <rect key="frame" x="494" y="0.0" width="106" height="30"/>
-                                        <state key="normal" title="factory method"/>
-                                    </button>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wEM-w1-dyt">
                                         <rect key="frame" x="20" y="40" width="560" height="440"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -46,12 +42,10 @@
                                 <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstItem="wEM-w1-dyt" firstAttribute="centerX" secondItem="vWk-mF-uzo" secondAttribute="centerX" id="3Qc-IB-AgC"/>
-                                    <constraint firstItem="wEM-w1-dyt" firstAttribute="top" secondItem="ZIM-hw-1T1" secondAttribute="bottom" constant="10" id="JB0-cg-pTs"/>
+                                    <constraint firstItem="wEM-w1-dyt" firstAttribute="top" secondItem="gNi-Gb-7ET" secondAttribute="top" constant="40" id="Q1M-GD-ekp"/>
                                     <constraint firstAttribute="trailing" secondItem="wEM-w1-dyt" secondAttribute="trailing" constant="20" id="UXg-qO-qCI"/>
-                                    <constraint firstItem="ZIM-hw-1T1" firstAttribute="top" secondItem="gNi-Gb-7ET" secondAttribute="top" id="bPl-Zv-uSb"/>
                                     <constraint firstItem="wEM-w1-dyt" firstAttribute="centerX" secondItem="gNi-Gb-7ET" secondAttribute="centerX" id="evO-6E-v8Q"/>
                                     <constraint firstAttribute="bottom" secondItem="vWk-mF-uzo" secondAttribute="bottom" constant="20" id="mAW-Mb-mga"/>
-                                    <constraint firstAttribute="trailing" secondItem="ZIM-hw-1T1" secondAttribute="trailing" id="nxi-2d-PA6"/>
                                     <constraint firstItem="wEM-w1-dyt" firstAttribute="leading" secondItem="gNi-Gb-7ET" secondAttribute="leading" constant="20" id="rsv-AV-HHd"/>
                                     <constraint firstItem="vWk-mF-uzo" firstAttribute="top" secondItem="wEM-w1-dyt" secondAttribute="bottom" constant="50" id="xal-s0-LHf"/>
                                 </constraints>
